<resources>
    <string name="app_name">NMedia</string>
    <string name="app_heading">NMedia!</string>
    <string name="logo_alt">NMedia logo</string>
    <string name="author_mock">Netology. University of Internet Professions</string>
    <string name="published_mock">21 of May at 18:36</string>
    <string name="menu_button">Menu Button</string>
    <string name="mock_content">
        Hello, this is a new netology! Once upon a time, netology began with intensive courses in online marketing.
        Then came courses in design, development, analytics and management.
        We grow ourselves and help students grow: from beginners to confident professionals.
        But the most important thing remains with us: we believe that in everyone there is already a force that makes
        want more, aim higher, run faster. Our mission is to help you get on the path to growth and
        start a chain of changes - <a href="http://netolo.gy/fyb">http://netolo.gy/fyb</a>
    </string>
    <string name="mock_likes">10</string>
    <string name="mock_shares">5</string>
    <string name="mock_seen">5</string>
    <string name="like_alt">Like icon</string>
    <string name="share_alt">Shared icon</string>
    <string name="seen_alt">Seen icon</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="edit_alt">Edit post icon</string>
    <string name="edit_hint">Edit post</string>
    <string name="content_hint">Post text</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="save_button">Save button</string>
    <string name="save">Save</string>
    <string name="add_post">Add post</string>
    <string name="error_empty_content">Content can not be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="chooser_play_video">Play video</string>
    <string name="video_img">Video image</string>
    <string name="play_video">Play video</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">%1$s liked post %2$s</string>
    <string name="notification_user_added_post">%1$s added new post</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="error_deleting">Can not delete post. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="attachment_img">Post image</string>
    <string name="new_posts">New Posts</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="login_not_empty">Login can not be empty</string>
    <string name="password">Password</string>
    <string name="password_not_empty">Password can not be empty</string>
    <string name="password_repeat_error">Passwords must be equal</string>
    <string name="repeat_password">Repeat password</string>
    <string name="error_sign_in">Authorization error</string>
    <string name="sign_in_alert">Sign In to continue</string>
    <string name="sign_out_alert">Are you sure?</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="name_not_empty">Name can not be empty</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last week</string>
</resources>