<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:contentDescription="@string/logo_alt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/headerBarrier"
        />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/tvPublished"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="@id/ivLogo"
        tools:text="@string/author_mock" />

    <TextView
        android:id="@+id/tvPublished"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
        tools:text="@string/published_mock"
        />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvAuthor"
        app:layout_constraintTop_toTopOf="@id/ivLogo"
        app:srcCompat="@drawable/menu_24"
        app:tint="@color/grey"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ivLogo, tvPublished"
        />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/mock_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        app:layout_constraintBottom_toTopOf="@id/contentBarrier"
        android:justificationMode="inter_word"
        android:textColorLink="@color/blue"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/contentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvContent"
        app:barrierMargin="@dimen/common_spacing"
        />

    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:srcCompat="@drawable/like_24"
        android:layout_margin="@dimen/small_spacing"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/grey"
        android:contentDescription="@string/like_alt" />

    <TextView
        android:id="@+id/tvLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/mock_likes"
        android:layout_marginStart="@dimen/small_spacing"
        app:layout_constraintTop_toTopOf="@id/ivLike"
        app:layout_constraintStart_toEndOf="@id/ivLike"
        android:textColor="@color/grey"
        />

    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:srcCompat="@drawable/share_24"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/ivLike"
        app:layout_constraintStart_toEndOf="@id/tvLike"
        app:tint="@color/grey"
        android:contentDescription="@string/share_alt" />

    <TextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/mock_shares"
        android:layout_marginStart="@dimen/small_spacing"
        app:layout_constraintTop_toTopOf="@id/ivLike"
        app:layout_constraintStart_toEndOf="@id/ivShare"
        android:textColor="@color/grey"
        />

    <ImageView
        android:id="@+id/ivSeen"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:srcCompat="@drawable/eye_24"
        android:layout_marginEnd="@dimen/small_spacing"
        app:layout_constraintTop_toTopOf="@id/ivLike"
        app:layout_constraintEnd_toStartOf="@id/tvSeen"
        app:tint="@color/grey"
        android:contentDescription="@string/seen_alt" />

    <TextView
        android:id="@+id/tvSeen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/mock_seen"
        android:layout_marginStart="@dimen/small_spacing"
        app:layout_constraintTop_toTopOf="@id/ivLike"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/grey"
        />

</androidx.constraintlayout.widget.ConstraintLayout>