<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:contentDescription="@string/logo_alt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/headerBarrier"
        />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/tvPublished"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="@id/ivLogo"
        tools:text="@string/author_mock" />

    <TextView
        android:id="@+id/tvPublished"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
        tools:text="@string/published_mock"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/menu_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvAuthor"
        app:layout_constraintTop_toTopOf="@id/ivLogo"
        android:contentDescription="@string/menu_button"
        style="@style/Widget.AppTheme.MenuButton"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ivLogo, tvPublished"
        />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/mock_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        app:layout_constraintBottom_toTopOf="@id/videoImg"
        android:justificationMode="inter_word"
        android:textColorLink="@color/blue"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="videoImg, play" />

    <ImageView
        android:id="@+id/videoImg"
        android:layout_width="@dimen/big_image_size"
        android:layout_height="@dimen/big_image_size"
        android:contentDescription="@string/video_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/video"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/tvContent"
        app:layout_constraintBottom_toTopOf="@id/contentBarrier"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play_video"
        app:icon="@drawable/baseline_play_arrow_48"
        app:layout_constraintTop_toTopOf="@id/videoImg"
        app:layout_constraintBottom_toBottomOf="@id/videoImg"
        app:layout_constraintStart_toStartOf="@id/videoImg"
        app:layout_constraintEnd_toEndOf="@id/videoImg"
        android:layout_marginStart="@dimen/small_spacing"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/contentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvContent"
        app:barrierMargin="@dimen/small_spacing"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/like_alt"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        app:layout_constraintStart_toStartOf="parent"
        tools:checked="false"
        tools:text="999"
        style="@style/Widget.AppTheme.LikeCheckBox"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/share_24"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        android:contentDescription="@string/share_alt"
        tools:text="99"
        style="@style/Widget.AppTheme.IconButton"
        />

    <ImageView
        android:id="@+id/ivSeen"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:srcCompat="@drawable/eye_24"
        android:layout_marginEnd="@dimen/small_spacing"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintEnd_toStartOf="@id/tvSeen"
        app:tint="@color/grey"
        android:contentDescription="@string/seen_alt" />

    <TextView
        android:id="@+id/tvSeen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/mock_seen"
        android:layout_marginStart="@dimen/small_spacing"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/grey"
        />

</androidx.constraintlayout.widget.ConstraintLayout>