<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nav_sign_up_fragment"
    >
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvName"
        android:labelFor="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/top_margin_registration"
        android:text="@string/name"
        android:textSize="@dimen/header_size"
        android:textColor="@color/blue"
        />
    <EditText
        android:id="@+id/editName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/common_spacing"
        tools:text="@tools:sample/lorem[1]"
        android:background="@color/light_pink"
        />
    <TextView
        android:id="@+id/tvNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name_not_empty"
        android:textColor="@color/red"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tvEdit"
        android:labelFor="@+id/editLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvNameError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:textSize="@dimen/header_size"
        android:layout_margin="@dimen/common_spacing"
        android:textColor="@color/blue"
        />
    <EditText
        android:id="@+id/editLogin"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/tvEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/common_spacing"
        tools:text="@tools:sample/lorem[1]"
        android:background="@color/light_pink"
        />
    <TextView
        android:id="@+id/tvLoginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_not_empty"
        android:textColor="@color/red"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tvPassword"
        android:labelFor="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvLoginError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/common_spacing"
        android:text="@string/password"
        android:textSize="@dimen/header_size"
        android:textColor="@color/blue"
        />
    <EditText
        android:id="@+id/editPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:padding="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@tools:sample/lorem[3]"
        android:background="@color/light_pink"
        />
    <TextView
        android:id="@+id/tvPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/password_not_empty"
        android:textColor="@color/red"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tvPasswordRepeat"
        android:labelFor="@+id/editPasswordRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/common_spacing"
        android:text="@string/repeat_password"
        android:textSize="@dimen/header_size"
        android:textColor="@color/blue"
        />
    <EditText
        android:id="@+id/editPasswordRepeat"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:padding="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordRepeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@tools:sample/lorem[3]"
        android:background="@color/light_pink"
        />
    <TextView
        android:id="@+id/tvPasswordRepeatError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editPasswordRepeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/password_repeat_error"
        android:textColor="@color/red"
        android:visibility="gone"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/doRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordRepeatError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/common_spacing"
        />

</androidx.constraintlayout.widget.ConstraintLayout>